--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,32 @@ body {
 }
 
 .cnt-lg {
-    max-width: 1640px;
+    max-width: 96%;
     margin: auto;
 }
 
-/* h2 {
-    font-weight: 700;
-    font-size: 40px;
-    line-height: 55px;
-} */
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+ul li {
+    list-style: none;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+h2 span {
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
 
 h3 {
     font-weight: 600;
@@ -36,36 +53,77 @@ p {
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
+    margin: 0;
 }
 
+/* ---  */
 .btn {
     display: inline-block;
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
-    padding: 14px 28px;
+    padding: 10px 26px;
     border-radius: 50px;
     color: #fff;
+    transition: 0.3s ease;
     background-color: #007F61;
 }
+
+.btn:hover {
+    color: #007F61;
+    background-color: transparent;
+    border: 1px solid #007F61;
+}
+
+/* ---  */
 
 .btn-white {
     color: #007F61;
     background-color: #fff;
 }
 
+.btn-white span {
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.btn.btn-white:hover {
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+
+.btn.btn-white:hover span {
+    color: #fff;
+    -webkit-text-fill-color: unset;
+}
+
+/* ---  */
+
 .btn-outline {
     color: #007F61;
     background-color: unset;
     border: 1px solid #007F61;
 }
+.btn.btn-outline:hover{
+    color: #fff;
+    background-color: #007F61;
+}
+
+/* ---  */
 
 .btn-outline-wht {
     color: #fff;
     background-color: unset;
     border: 1px solid #fff;
 }
-
+.btn.btn-outline-wht:hover{
+    color: #007F61;
+    border: 1px solid #fff;
+    background-color: #fff;
+}
 /* ---------------- */
 header {
     border-bottom: 1px solid #EDEDF1;
@@ -417,13 +475,7 @@ header .btn:hover {
     text-align: center;
     margin-bottom: 32px;
 }
-.team h2 span{
-    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-background-clip: text;
-text-fill-color: transparent;
-}
+
 
 .team .team-wrap {
     position: relative;
@@ -431,6 +483,7 @@ text-fill-color: transparent;
 
 .team img {
     border-radius: 16px;
+    width: 100%;
 }
 
 .team .txt {
@@ -452,4 +505,290 @@ text-fill-color: transparent;
     font-size: 16px;
     line-height: 19px;
     color: #061F33;
+}
+
+/* ----- deal -----  */
+.deal {
+    position: relative;
+    padding-top: 82px;
+    padding-bottom: 80px;
+}
+
+.deal .cnt-lg {
+    padding: 80px;
+    border-radius: 16px;
+    background-color: #DEEEEB;
+}
+
+.deal h2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    margin-bottom: 44px;
+}
+
+.deal h3 {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 77px;
+}
+
+.deal h3 span {
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+.deal p {
+    color: rgba(35, 31, 32, 0.7);
+}
+
+.deal p span {
+    display: block;
+}
+
+/* ------ client -------  */
+.client {
+    position: relative;
+    padding-top: 80px;
+    padding-bottom: 150px;
+}
+
+.client .title_sec {
+    text-align: center;
+    margin-bottom: 38px;
+}
+
+.client h2 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    color: #061F33;
+    margin-bottom: 16px;
+}
+
+.client .txt {
+    margin-left: 17px;
+    color: #061F33;
+}
+
+.client h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 27px;
+    margin-bottom: 8px;
+}
+
+.client .content {
+    margin-top: 34px;
+    color: #231F20;
+    text-align: center;
+}
+
+.client .slick-prev,
+.client .slick-next {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background: #DEEEEB;
+}
+
+.client .slick-prev::before,
+.client .slick-next::before {
+    color: #292D32;
+}
+
+.client .slick-prev {
+    left: -25%;
+}
+
+.client .slick-next {
+    right: -25%;
+}
+
+.client .slick-prev:focus,
+.client .slick-next:focus {
+    background: #DEEEEB;
+}
+
+.client .slick-prev:hover,
+.client .slick-next:hover {
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+}
+
+.client .slick-prev:hover::before,
+.client .slick-next:hover::before {
+    color: #fff;
+}
+
+/* --------- slick slider -----  */
+.slick-slide {
+    margin: 0px 20px;
+}
+
+.slick-slide img {
+    width: 100%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    font-family: 'FontAwesome' !important;
+}
+
+/* --------- slick slider -----  */
+
+
+/* ------- footer -----  */
+footer {
+    position: relative;
+    /* background-color: #DEEEEB; */
+}
+
+footer::before {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    width: 100%;
+    height: 80%;
+    z-index: -1;
+    background-color: #DEEEEB;
+}
+
+footer .footer-top {
+    color: #fff;
+    padding: 80px;
+    margin-bottom: 20px;
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+    border-radius: 16px;
+}
+
+footer .left-txt h3 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    margin-bottom: 12px;
+}
+
+footer .left-txt p {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 32px;
+}
+
+footer .left-txt .btn {
+    margin-top: 26px;
+}
+
+footer .right-social p {
+    /* color: #fff; */
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: 18px;
+}
+
+footer .right-social ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+footer .right-social ul li {
+    position: relative;
+    margin-right: 16px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer .right-social ul li:last-child {
+    margin-right: 0;
+}
+
+footer .right-social ul li::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    width: 40px;
+    height: 40px;
+    z-index: 0;
+    border-radius: 50px;
+    background: #fff;
+}
+
+footer .right-social ul li a {
+    z-index: 1;
+}
+
+footer .right-social ul li a i {
+    background: linear-gradient(90deg, #11698E 0.02%, #16C79A 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+}
+
+footer .border-top {
+    position: relative;
+    padding-top: 22px;
+}
+
+footer .border-top::before {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    opacity: 0.5;
+    background: #061F33;
+}
+
+footer .menu-list ul {
+    display: flex;
+}
+
+footer .menu-list ul li {
+    margin-right: 64px;
+}
+
+footer .menu-list ul li:last-child {
+    margin-right: 0;
+}
+
+footer .menu-list ul li a {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #061F33;
+}
+
+footer .menu-list ul li a:hover {
+    color: #007F61;
+}
+
+footer .numb p {
+    position: relative;
+    padding-left: 28px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #061F33;
+}
+
+footer .numb p img {
+    position: absolute;
+    top: -4px;
+    left: 0;
+}
+
+footer .copyright-text p {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
