--- a/css/style.css
+++ b/css/style.css
@@ -134,13 +134,18 @@ header nav {
 }
 
 header .navbar-nav .nav-item {
-    padding: 0 31px;
+    padding: 0 27px;
 }
 
 header .navbar-nav .nav-item .nav-link {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 19px;
+    padding-left: 0;
+    padding-right: 0;
+}
+header .navbar-nav .nav-item .nav-link:hover ,header .navbar-nav .nav-item .nav-link.active{
+    color: #007F61;
 }
 
 header .navbar-nav .nav-item:first-child {
