--- a/css/style.css
+++ b/css/style.css
@@ -936,11 +936,23 @@ footer .copyright-text p {
 
 .our-process .process-list {
     margin-top: 60px;
-
 }
 
-.our-process .process-list
+.our-process .process-list ul{
+    position: relative;
+    padding-right: 70px;
+}
+.our-process .process-list ul::before{
+    position: absolute;
+    content: '';
+    top: -25px;
+    right: 0;
+    width: 1px;
+    height: 284px;
+    border-right: 1px dashed #000;
+}
 .our-process .process-list li {
+    position: relative;
     padding: 14px 20px;
     border-radius: 8px;
     margin-bottom: 36px;
@@ -948,6 +960,15 @@ footer .copyright-text p {
     font-size: 24px;
     line-height: 29px;
     color: #061F33;
+}.our-process .process-list li::before{
+    position: absolute;
+    content: '';
+    top: 25px;
+    right: -70px;
+    width: 70px;
+    height: 1px;
+    border-bottom: 1px dashed #000;
+
 }
 
 .our-process .process-list li:nth-last-child(3) {
