--- a/css/media.css
+++ b/css/media.css
@@ -55,6 +55,21 @@
     .let p span {
         display: inline;
     }
+
+    .about-hero .about-wrap .img {
+        border-radius: 80px;
+    }
+
+    .about-hero .col-lg-4:first-child .img,
+    .about-hero .img img {
+        border-radius: 80px 0px 80px 80px;
+    }
+
+    .about-hero .col-lg-4:last-child .img,
+    .about-hero .img img {
+        border-radius: 80px 80px 0px 80px;
+    }
+
 }
 
 @media(max-width:991px) {
@@ -84,8 +99,18 @@
         margin-bottom: 26px;
     }
 
-    .team .team-wrap {
+    .team .col-lg-3:nth-last-child(3) .team-wrap,
+    .team .col-lg-3:nth-last-child(4) .team-wrap {
         margin-bottom: 40px;
+    }
+
+    .team .col-lg-3:nth-last-child(1) .team-wrap,
+    .team .col-lg-3:nth-last-child(2) .team-wrap {
+        margin-bottom: 0;
+    }
+
+    .team .img img {
+        border-radius: 80px 0 0 0;
     }
 
     .deal .deal-wrap {
@@ -169,6 +194,36 @@
     .contact_hero .con-detail {
         margin-top: 40px;
     }
+
+    .about-hero .about-wrap .img {
+        height: auto;
+        background-image: none !important;
+    }
+
+    .about-hero .about-wrap .img img {
+        display: block;
+        margin-bottom: 60px;
+    }
+
+    .mission .row {
+        flex-direction: column-reverse;
+    }
+
+    .mission .img img {
+        width: 100%;
+        margin-bottom: 34px;
+    }
+    .inset_logo img {
+        margin-bottom: 32px;
+    }
+
+    .inset_logo img:nth-last-child(1),
+    .inset_logo img:nth-last-child(2) {
+        margin-bottom: 0px;
+    }
+    .choose .img img{
+        margin: 40px auto;
+    }
 }
 
 @media(max-width:767px) {
@@ -225,9 +280,10 @@
         margin-top: 32px;
     }
 
-    .expertise{
-        padding-bottom:90px;
+    .expertise {
+        padding-bottom: 90px;
     }
+
     .expertise .expert-info {
         width: 50%;
     }
@@ -335,5 +391,19 @@
     .contact_hero .loc-wrap {
         width: 100%;
         margin-bottom: 42px;
+    }
+
+    .team .col-lg-3:nth-last-child(1) .team-wrap {
+        margin-bottom: 0;
+    }
+
+    .team .col-lg-3:nth-last-child(2) .team-wrap {
+        margin-bottom: 40px;
+    }
+    .inset_logo img:nth-last-child(1){
+        margin-bottom: 0;
+    }
+    .inset_logo img:nth-last-child(2) {
+        margin-bottom: 32px;
     }
 }
