Add Some Section

--- a/css/media.css
+++ b/css/media.css
@@ -213,6 +213,7 @@
         width: 100%;
         margin-bottom: 34px;
     }
+
     .inset_logo img {
         margin-bottom: 32px;
     }
@@ -221,8 +222,19 @@
     .inset_logo img:nth-last-child(2) {
         margin-bottom: 0px;
     }
-    .choose .img img{
+
+    .choose .img img {
         margin: 40px auto;
+    }
+    
+    .growth .txt {
+        max-width: 100%;
+    }
+    
+    .growth .grow-btn {
+        max-width: 100%;
+        text-align: start;
+        margin-top: 28px;
     }
 }
 
@@ -277,7 +289,8 @@
 
     .project .see-more {
         text-align: start;
-        margin-top: 32px;
+        margin-top: 0px;
+        padding-top: 0;
     }
 
     .expertise {
@@ -354,9 +367,13 @@
         width: 30px;
     }
 
+    .project_hero {
+        padding: 40px 0;
+    }
+
     .project_hero h2 {
-        font-size: 52px;
-        line-height: 64px;
+        font-size: 50px;
+        line-height: 60px;
     }
 
     .project.project-tabs .pro-wrap {
@@ -400,10 +417,52 @@
     .team .col-lg-3:nth-last-child(2) .team-wrap {
         margin-bottom: 40px;
     }
-    .inset_logo img:nth-last-child(1){
+
+    .inset_logo img:nth-last-child(1) {
         margin-bottom: 0;
     }
+
     .inset_logo img:nth-last-child(2) {
         margin-bottom: 32px;
+    }
+
+    .about-hero .title_sec {
+        margin-bottom: 32px;
+    }
+
+    .about-hero .title_sec h2 {
+        font-size: 44px;
+        line-height: 50px;
+    }
+
+    .about-hero .text {
+        margin-top: 32px;
+    }
+
+    .about-hero .col-lg-4:last-child img {
+        margin-bottom: 0;
+    }
+
+    .deal .deal-wrap {
+        text-align: center;
+    }
+
+    .mission .mission-wrap {
+        text-align: center;
+    }
+
+    .mission .mission-info {
+        text-align: start;
+    }
+
+    .core-value h2,
+    .mission h3,
+    .choose h2,
+    .inset_logo h2 {
+        font-size: 30px;
+        line-height: 38px;
+    }
+    .growth .growth-wrap {
+        padding: 50px 40px;
     }
 }
