--- a/css/style.css
+++ b/css/style.css
@@ -1305,9 +1305,14 @@ footer .copyright-text p {
 }
 
 .contact_hero .loc-wrap {
-    width: 40%;
+    /* width: 40%; */
+    margin-bottom: 30px;
 }
-
+.contact_hero .map iframe{
+    width: 100%;
+    height: 560px;
+    border-radius: 20px;
+}
 .contact_hero .loc-wrap h4 {
     margin-bottom: 14px;
     font-weight: 600;
@@ -1328,7 +1333,22 @@ footer .copyright-text p {
     margin-bottom: 34px;
     flex-wrap: nowrap;
 }
+.contact_hero .con-detail .detail-wrap.numbs{
+    align-items: start;
+}
+.contact_hero .con-detail .detail-wrap.numbs a{
+    position: relative;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+.contact_hero .con-detail .detail-wrap.numbs a.whats::before{
+    position: absolute;
+    content: '\f232';
+    font-family: 'FontAwesome';
+    top: 0;
+    left: -30px;
 
+}
 .contact_hero .con-detail .detail-wrap .icon {
     margin-right: 20px;
 }
