--- a/css/media.css
+++ b/css/media.css
@@ -15,6 +15,10 @@
     .service .ser-box {
         height: auto;
     }
+
+    .work .work-wrap {
+        height: 400px;
+    }
 }
 
 
@@ -30,6 +34,10 @@
 
     .project-tabs .nav-tabs .nav-link {
         white-space: nowrap;
+    }
+
+    .work .work-wrap {
+        height: 440px;
     }
 }
 
@@ -82,7 +90,8 @@
         padding: 0;
         border: none;
     }
-    header .navbar-toggler:focus{
+
+    header .navbar-toggler:focus {
         box-shadow: none;
     }
 
@@ -105,6 +114,7 @@
     }
 
     .work .work-wrap {
+        height: 400px;
         margin-bottom: 26px;
     }
 
